# minio-cloudevents-service

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  catalog-info.yaml  gen_ref_pages.py  index.html  minioevents.py  mkdocs.yaml  objects.inv  pyproject.toml  ruff.toml  test_minioevents.py
.github/workflows/: release.yaml  schedule.yaml
docs/: gen_ref_pages.py
reference/SUMMARY/: index.html
reference/minioevents/: index.html
search/: search_index.json
tests/: test_minioevents.py
