[tool.poetry]
name = "minio-cloudevents-service"
version = "0.0.0"
description = "Produces CloudEvents from MinIO-Events"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "minioevents.py"}]

[tool.poetry.scripts]
minioevents = 'minioevents:main'

[tool.poetry.dependencies]
python = "^3.11"
cloudevents = "^1.10.1"
ConfigArgParse = "^1.7"
kafka-python-ng = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.3"
pytest-random-order = "^1.1.1"
pytest-ruff = "^0.4"
ruff = "^0.5.6"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=minioevents --cov-fail-under=100 --ruff --mypy --ignore=docs/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
