[tool.poetry]
name = "minio-cloudevents-service"
version = "0.0.0"
description = "Produces CloudEvents from MinIO-Events"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "minioevents.py"}]

[tool.poetry.scripts]
minioevents = 'minioevents:main'

[tool.poetry.dependencies]
python = "^3.11"
cloudevents = "^1.11.0"
ConfigArgParse = "^1.7"
kafka-python-ng = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mypy = "^1.0.1"
pytest-random-order = "^1.1.1"
pytest-ruff = "^0.4"
ruff = "^0.11.6"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=minioevents --cov-fail-under=100 --ruff --mypy --ignore=docs/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
