[tool.poetry]
name = "minio-cloudevents-service"
version = "0.0.0"
description = "Produces CloudEvents from MinIO-Events"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "minioevents.py"}]

[tool.poetry.scripts]
minioevents = 'minioevents:main'

[tool.poetry.dependencies]
python = "^3.11"
cloudevents = "^1.12.0"
ConfigArgParse = "^1.7"
kafka-python-ng = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mypy = "^1.0.1"
pytest-random-order = "^1.2.0"
pytest-ruff = "^0.5"
ruff = "^0.14.11"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q", "--random-order", "--doctest-glob='*.md'", "--doctest-modules", "--cov=minioevents", "--cov-fail-under=100", "--ruff", "--mypy", "--ignore=docs/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
